# zink

./: Cargo.toml  README.md  _typos.toml
.github/workflows/: main.yml
codegen/src/visitor/: control.rs
codegen/src/wasm/: func.rs  host.rs  mod.rs
compiler/src/: compiler.rs  parser.rs
zink/: Cargo.toml
zink/abi/codegen/: Cargo.toml
zink/codegen/src/: contract.rs  event.rs  revert.rs  selector.rs  storage.rs
zink/examples/: addmod.rs  bound_checks.rs  bytes.rs  log.rs
zink/src/: event.rs  lib.rs
zink/src/asm/: evm.rs  ext.rs  mod.rs
zink/src/num/: mod.rs  safe.rs
zink/src/primitives/: address.rs  bytes.rs  mod.rs  properties.rs  u256.rs
zink/src/storage/: dkmapping.rs  mapping.rs  mod.rs  value.rs
