[workspace]
members = [
  "codegen",
  "compiler",
  "compiler/filetests",
  "evm/opcodes",
  "evm/abi",
  "zink/abi",
  "zink/abi/codegen",
  "zink/codegen",
  "zink/elko",
  "zint",
  "zint/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.12"
authors = ["clearloop"]
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://github.com/clearloop/zink"
repository = "https://github.com/clearloop/zink.git"

[workspace.dependencies]
anyhow = "1.0.79"
cargo_metadata = "0.18.1"
clap = { version = "4.5.35", features = ["derive"] }
ccli = "0.0.1"
colored = "2.1.0"
etc = "0.1.19"
heck = "0.5.0"
hex = "0.4.3"
indexmap = "2.2.2"
paste = "1.0.14"
postcard = { version = "1.0.8", default-features = false }
proc-macro2 = "1.0.78"
quote = "1.0.35"
revm = { version = "14", default-features = false }
semver = "1.0.21"
serde = { version = "1.0.196", default-features = false }
serde_json = "1.0.113"
smallvec = "1.13.1"
syn = { version = "2.0.77", features = ["full"] }
tempfile = "3.19.1"
thiserror = "1.0.56"
tiny-keccak = { version = "2.0.2", features = [
  "keccak",
], default-features = false }
toml = "0.8.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wasm-opt = "0.116.0"
wasmparser = "0.121.0"
wat = "1.0.85"

## EVM packages
opcodes = { package = "evm-opcodes", path = "evm/opcodes", version = "=0.0.5", features = [
  "data",
] }
sol-abi = { path = "evm/abi", version = "=0.0.1" }

## Zink packages
elko = { path = "elko", version = "0.1.12" }
filetests = { package = "zinkc-filetests", path = "compiler/filetests", version = "0.1.12" }
zabi = { path = "zink/abi", version = "0.1.12" }
zabi-codegen = { path = "zink/abi/codegen", version = "0.1.12" }
zingen = { path = "codegen", version = "0.1.12" }
zink = { path = "zink", version = "0.1.12" }
zink-codegen = { path = "zink/codegen", version = "0.1.12" }
zinkc = { path = "compiler", version = "0.1.12" }
zint = { path = "zint", version = "0.1.12" }

[workspace.metadata.conta]
packages = [
  "zabi",
  "zabi-codegen",
  "zingen",
  "zinkc",
  "filetests",
  "zint",
  "zink-codegen",
  "zink",
  "cargo-zint",
  "elko",
]
